# data_pipeline_practice

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  app.py  cdk.context.json  cdk.json  package.json  parquet_file_to_sql_ddl.py  pyproject.toml  requirements.txt  setup.py  tasks.py  twitter.env.json.sample
containers/crypto_app/: Dockerfile  docker-compose.yml  requirements.txt
containers/crypto_app/src/: crypto.env.sample  server.py
containers/twitter_stream_app/: .dockerignore  docker-compose.yml  twitter-env.json.sample
containers/twitter_stream_app/src/: server.py  twitter.env.sample
data_pipeline_practice/: cdk_pipelines_demo_pipeline_stack.py  cdk_pipelines_stage.py  data_pipeline_practice_stack.py  data_pipeline_stack.py  ecs_fargate_cluster.py  monitoring_stack.py  networking_stack.py  stream_app_stack.py  streaming_data_pipeline_s3_stack.py  transformation_stack.py  twitter_stream_app_stack.py
docker_images/twitter_stream_app/: Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml  twitter-stream-app.env
docker_images/twitter_stream_app/src/: server.py
lambda/: test.py
sql_generator/: parquet_file_to_sql_ddl.py
tests/: conftest.py
tests/containers/crypto_app/src/: test_server.py
tests/unit/: test_streaming_data_pipeline_s3_stack.py
